# WaveSimulation

./: .gitignore  CMakeLists.txt  README.md  a.out  debug  hello_triangle.cpp  install_dependencies.sh  main.cpp  makefile  setup_linux.sh  setup_windows.bat
.github/workflows/: build.yml  c-cpp.yml
include/: CMakeLists.txt  Camera.h  ComputeShaderClass.h  GLFWSetup.h  Loader.h  Mesh.h  Model.h  SSBO.h  VBO.h  jsonReader.h  shaderClass.h  waveModel.h  waveModelCPU.h  waveModelGPU.h
include/WaveSimProj/: Camera.h  ComputeShaderClass.h  EBO.h  Loader.h  Mesh.h  Model.h  ObjectShaderClass.h  SSBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h  waveModelCPU.h  waveModelGPU.h
include/WaveSimProj/Setup/: ApplicationSetup.h  GLFWSetup.h  OpenGLSetup.h
include/glad/: glad.h
resources/: waves.gltf
resources/shaders/: default.frag  default.vert  dt.comp  horizontalidft.comp  initialize.comp  normalvec.comp  verticalidft.comp  wavePropagation.comp
resources/shaders/ComputeShaders/: wavePropagation.comp
src/: CMakeLists.txt  Camera.cpp  ComputeShaderClass.cpp  GLFWSetup.cpp  Loader.cpp  Mesh.cpp  Model.cpp  ObjectShaderClass.cpp  SSBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  base64.cpp  shaderClass.cpp  waveModel.cpp  waveModelCPU.cpp  waveModelGPU.cpp
src/WaveSimProj/: Camera.cpp  ComputeShaderClass.cpp  EBO.cpp  Loader.cpp  Mesh.cpp  Model.cpp  ObjectShaderClass.cpp  SSBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  base64.cpp  glad.c  shaderClass.cpp  waveModelCPU.cpp  waveModelGPU.cpp
src/WaveSimProj/Setup/: GLFWSetup.cpp  OpenGLSetup.cpp
